<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/WizardPageContainer"
    android:orientation="vertical">

    <TextView style="@style/WizardPageTitle" />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView style="@style/WizardFormLabel"
                android:text="@string/label_your_name" />

            <EditText android:id="@+id/father_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:inputType="textCapWords"
                android:hint="@string/hint_your_name"
                android:layout_marginBottom="16dp" />

           <EditText android:id="@+id/father_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:inputType="phone"
                android:hint="@string/hint_your_phone"
                android:layout_marginBottom="16dp"/>

            <TextView style="@style/WizardFormLabel"
                android:text="@string/label_your_email" />

            <EditText android:id="@+id/father_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_your_email" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
